Test name change

--- a/Advanced-JS/requireJS-test/main.html
+++ b/Advanced-JS/requireJS-test/main.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 
-<script src="lib/require.js" data-main="lib/main"></script>
+<script src="lib/require.js" data-main="lib/req"></script>
 </body>
 </html>
